--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,8 @@ import Plan from '../components/Plan.astro';
 import Wardrobe from '../components/Wardrobe.astro';
 import Offer from '../components/Offer.astro';
 import Transformation from '../components/Transformation.astro';
-import Gallery from '../components/Gallery.astro';
-import Booking from '../components/Booking.astro';
+import ReserveEmail from '../components/ReserveEmail.astro';
+import BookingBox from '../components/BookingBox.astro';
 import FAQ from '../components/FAQ.astro';
 import FinalCTA from '../components/FinalCTA.astro';
 ---
@@ -21,8 +21,8 @@ import FinalCTA from '../components/FinalCTA.astro';
 	<Wardrobe />
 	<Offer />
 	<Transformation />
-	<Gallery />
-	<Booking />
+	<ReserveEmail />
+	<BookingBox />
 	<FAQ />
 	<FinalCTA />
 </DefaultLayout>
